@@ -17,6 +17,7 @@
 11. Only allow editing a favourite if it has 'presetParams'
 12. Animate mobile navigation 'pill'.
 13. Add sort options to 'All songs' and 'Compositions'
+14. Swipe to change volume on cover only.
 
 4.0.4
 ------
